test/files/neg/t10003.check
t10003.scala:4: error: illegal cyclic reference involving type List
    new Functor[a] { type List[t] = List[t] }
                                    ^
1 error
